# project-2_kolesnik_matvey_m25-555

./: .gitignore  Makefile  README.md  db_meta.json  demo_final.cast  primitive-db-demo.cast  primitive-db-demo1.cast  pyproject.toml
data/: users.json
src/primitive_db/: .core.py.swp  constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
