[tool.poetry]
name = "project-2-kolesnik-matvey-m25-555"
version = "0.1.0"
description = "Primitive DB project"
authors = ["Matthew <mkolesnik260592@gmail.com>"]
readme = "README.md"
packages = [
    { include = "primitive_db", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
prettytable = "^3.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.6"

[tool.poetry.scripts]
database = "primitive_db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
